tests/errors/floatStringInput.f90
program floatStringInput
    implicit none
    real::x


    print *, "Enter Float: "
    read(*,*) x
    print *, "You Entered: ", x
end program floatStringInput